--- a/shard.yml
+++ b/shard.yml
@@ -4,6 +4,10 @@ version: 0.1.1
 authors:
   - unn4m3d <smelnikov871@gmail.com>
 
+dependencies:
+  version:
+    github: unn4m3d/version
+
 
 crystal: 0.19.4
 
